--- a/Inform_BusRoute/app/src/main/res/layout/activity_display_places.xml
+++ b/Inform_BusRoute/app/src/main/res/layout/activity_display_places.xml
@@ -9,6 +9,7 @@
     <Spinner
         android:id="@+id/spinner"
         android:layout_marginTop="10dp"
+        android:layout_marginLeft="6dp"
         android:layout_marginBottom="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
