--- a/Inform_BusRoute/app/src/main/res/layout/activity_display_times.xml
+++ b/Inform_BusRoute/app/src/main/res/layout/activity_display_times.xml
@@ -11,9 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginLeft="6dp"
         android:layout_marginBottom="15dp"
         android:paddingStart="5dp"
-        android:paddingEnd="5dp"
         android:entries="@array/days" />
 
     <ListView
