--- a/Inform_BusRoute/app/src/main/res/layout/activity_display_times.xml
+++ b/Inform_BusRoute/app/src/main/res/layout/activity_display_times.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:textAlignment="center"
     tools:context=".Display_Times">
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_width="120dp"
+        android:layout_height="30dp"
         android:layout_marginLeft="6dp"
-        android:layout_marginBottom="15dp"
-        android:paddingStart="5dp"
-        android:entries="@array/days" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:entries="@array/days"
+        android:gravity="center_vertical"
+        android:paddingStart="5dp" />
 
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </ListView>
+        android:layout_height="match_parent"></ListView>
 
     <TextView
         android:id="@+id/emptyView"
