--- a/Inform_BusRoute/app/src/main/res/layout/activity_main.xml
+++ b/Inform_BusRoute/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,19 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:id="@+id/bluetooth"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="130dp"
         android:layout_marginTop="420dp"
-        android:text=""
+        android:layout_marginEnd="130dp"
+        android:background="@drawable/drawable_button"
+        android:elevation="4.5dp"
+        android:stateListAnimator="@null"
+        android:text="@string/bluetooth"
+        android:textColor="#040404"
+        android:textSize="20sp"
+        app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,13 +27,22 @@
 
     <Button
         android:id="@+id/timetable"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="130dp"
         android:layout_marginTop="20dp"
-        android:text="時刻表"
+        android:layout_marginEnd="130dp"
+        android:background="@drawable/drawable_button"
+        android:elevation="4.5dp"
+        android:stateListAnimator="@null"
+        android:text="@string/timetable"
+        android:textColor="#040404"
+        android:textSize="20sp"
+        app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/bluetooth" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
