--- a/Inform_BusRoute/app/src/main/res/values/colors.xml
+++ b/Inform_BusRoute/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lightSkyBlue">#87CEFA</color>
+    <color name="skyBlue">#87C8EA</color>
 </resources>
