--- a/Inform_BusRoute/app/src/main/res/layout/activity_bluetooth.xml
+++ b/Inform_BusRoute/app/src/main/res/layout/activity_bluetooth.xml
@@ -86,12 +86,6 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:orientation="horizontal">
-    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -106,16 +100,6 @@
             android:layout_marginTop="70dp"
             android:layout_marginBottom="100dp" />
 
-        <TextView
-            android:id="@+id/label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="30dp"
-            android:textColor="#ccc"
-            android:textSize="20sp" />
-
         <Button
             android:id="@+id/button3"
             android:layout_width="match_parent"
@@ -124,11 +108,11 @@
             android:layout_marginRight="80dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/drawable_button"
-            app:backgroundTint="@null"
             android:elevation="4.5dp"
             android:stateListAnimator="@null"
             android:text="@string/button3"
-            android:textColor="#040404" />
+            android:textColor="#040404"
+            app:backgroundTint="@null" />
 
     </RelativeLayout>
 
