--- a/Inform_BusRoute/app/src/main/res/layout/activity_main.xml
+++ b/Inform_BusRoute/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/bus" />
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/bluetooth"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="420dp"
-        android:layout_marginEnd="130dp"
         android:background="@drawable/drawable_button"
         android:elevation="4.5dp"
+        android:fontFamily="sans-serif"
+        android:paddingStart="30dp"
+        android:paddingTop="7dp"
+        android:paddingEnd="30dp"
+        android:paddingBottom="7dp"
         android:stateListAnimator="@null"
         android:text="@string/bluetooth"
         android:textColor="#040404"
@@ -23,26 +47,38 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
     <Button
         android:id="@+id/timetable"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="130dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/drawable_button"
         android:elevation="4.5dp"
+        android:paddingStart="30dp"
+        android:paddingTop="7dp"
+        android:paddingEnd="30dp"
+        android:paddingBottom="7dp"
         android:stateListAnimator="@null"
         android:text="@string/timetable"
         android:textColor="#040404"
         android:textSize="20sp"
         app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bluetooth" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="179dp"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
